syntax = "proto3";

package schemas.greyseal.v1;

message Question {
  string uuid = 1;
  string role_description = 2;
  string content = 3;
}

message Answer {
  string uuid = 1;
  string message = 2;
  repeated string references = 3;
}